--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<IMG STYLE="position:absolute; TOP:1px; LEFT:1px; WIDTH:12%;" SRC="images/logo.jpg" >
+					<IMG STYLE="position:absolute; TOP:1px; LEFT:1px; WIDTH:11%;" SRC="images/logo.jpg" >
 					<nav id="nav">
-						<a href="index.html"><font size="4"><span style="background-color: #343434">&nbsp Home &nbsp</span></font></a>
-						<a href="generic.html"><font size="4"><span style="background-color: #343434">&nbsp Generic &nbsp</span></font></a>
-						<a href="elements.html"><font size="4"><span style="background-color: #343434">&nbsp Elements &nbsp</span></font></a>
+						<a href="index.html"><font size="4" color="white"><span style="background-color: #343434">&nbsp Home &nbsp</span></font></a>
+						<a href="generic.html"><font size="4" color="white"><span style="background-color: #343434">&nbsp About &nbsp</span></font></a>
+						<a href="elements.html"><font size="4" color="white"><span style="background-color: #343434">&nbsp Contact &nbsp</span></font></a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -35,8 +35,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1><span style="background-color: #F7F7F7"><b>&nbsp Welcome to Draftek Design &nbsp</b></span></h1>
-				<p><font size="5"><span style="background-color: #343434"> &nbsp Innovative Drafting, Design, and Rapid Prototyping Services &nbsp </span></font></p>
+				<h1><span style="background-color: #F7F7F7"><b>&nbsp Drafting, Design, and Rapid Prototyping &nbsp</b></span></h1>
+				<p><font size="5" color="white"><span style="background-color: #343434"> &nbsp Custom solutions for aerospace, medical, consumer product, and military applications. &nbsp </span></font></p>
 			</section>
 
 		<!-- One -->
@@ -45,29 +45,29 @@
 					<div class="flex flex-3">
 						<article>
 							<header>
-								<h3>Magna tempus sed amet<br /> aliquam veroeros</h3>
+								<h3>ITAR Compliant, SAM Registered, and DD-2345 Certified.</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+							<p><font color="black">Find out more about our certifications, government registrations, and NAICS codes here.</font></p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="#" class="button special">→</a>
 							</footer>
 						</article>
 						<article>
 							<header>
-								<h3>Interdum lorem pulvinar<br /> adipiscing vitae</h3>
+								<h3>Highly customized solutions for your drafting and design needs. </h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+							<p><font color="black">We provide engineering drawings, 3D models, and custom mechanical designs in most major CAD formats.</font></p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="#" class="button special">→</a>
 							</footer>
 						</article>
 						<article>
 							<header>
-								<h3>Libero purus magna sapien<br /> sed ullamcorper</h3>
+								<h3>Our in-house machine shop cuts down on lead times.</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+							<p><font color="black">Learn more about our capabilities in CNC machining, turning, 3D printing, and laser cutting.</font> </p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="#" class="button special">→</a>
 							</footer>
 						</article>
 					</div>
@@ -78,37 +78,37 @@
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
 					<header>
-						<h2>Ipsum Feugiat</h2>
-						<p>Semper suscipit posuere apede</p>
+						<h2>Building Our Network</h2>
+						<p>Draftek Design is constantly expanding.</p>
 					</header>
 					<div class="flex flex-4">
 						<div class="box person">
-							<div class="image round">
-								<img src="images/pic03.jpg" alt="Person 1" />
+							<div class="image">
+								<a href="http://www.roboraiders.com"><img src="images/pic03.jpg" alt="Person 1" /></a>
 							</div>
-							<h3>Magna</h3>
-							<p>Cipdum dolor</p>
+							<h3>FRC Team 75</h3>
+							<p>We proudly sponsor Hillsborough High School FIRST Team 75, the RoboRaiders, by providing machining, materials, training, and active mentorship the students.</p>
 						</div>
 						<div class="box person">
-							<div class="image round">
+							<div class="image">
 								<img src="images/pic04.jpg" alt="Person 2" />
 							</div>
-							<h3>Ipsum</h3>
-							<p>Vestibulum comm</p>
+							<h3>Upwork</h3>
+							<p>Our engineers are now expanding to the Upwork network to provide quality services not only to industry-leading companies, but to individuals and small companies alike.</p>
 						</div>
 						<div class="box person">
-							<div class="image round">
+							<div class="image">
 								<img src="images/pic05.jpg" alt="Person 3" />
 							</div>
-							<h3>Tempus</h3>
-							<p>Fusce pellentes</p>
+							<h3>Xometry</h3>
+							<p>We're happy to announce our new partnership with Xometry. As a result, we've ramped up our quality control processes, tooling, inspection equipment, and machinery.</p>
 						</div>
 						<div class="box person">
-							<div class="image round">
+							<div class="image">
 								<img src="images/pic06.jpg" alt="Person 4" />
 							</div>
-							<h3>Dolore</h3>
-							<p>Praesent placer</p>
+							<h3>NAMC</h3>
+							<p>Draftek Design is a member of the National Advanced Mobility Consortium (NAMC), a nation-wide alliance for research and development of ground vehicle and robotic systems.</p>
 						</div>
 					</div>
 				</div>
@@ -118,8 +118,8 @@
 			<section id="three" class="wrapper special">
 				<div class="inner">
 					<header class="align-center">
-						<h2>Nunc Dignissim</h2>
-						<p>Aliquam erat volutpat nam dui </p>
+						<h2>How can we help?</h2>
+						<p><b>Check out our portfolio below.</b></p>
 					</header>
 					<div class="flex flex-2">
 						<article>
@@ -127,11 +127,12 @@
 								<img src="images/pic01.jpg" alt="Pic 01" />
 							</div>
 							<header>
-								<h3>Praesent placerat magna</h3>
+								<h3>Engineering</h3>
 							</header>
-							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
+							<p><font color="black"> Our engineering experience includes CAD modeling, drafting with GD&T, pump design, machine design, automation with PLC and microcontrollers, 
+							machine guarding, consumer product design, robotics, and more.  We are constantly integrating new technologies and strategies to provide you with modern solutions.</font></p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="#" class="button special">→</a>
 							</footer>
 						</article>
 						<article>
@@ -139,11 +140,13 @@
 								<img src="images/pic02.jpg" alt="Pic 02" />
 							</div>
 							<header>
-								<h3>Fusce pellentesque tempus</h3>
+								<h3>Manufacturing</h3>
 							</header>
-							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
+							<p><font color="black"> We’ve machined parts for medical, government, and aerospace clients. Our capabilities include milling, turning, CNC, laser 
+							cutting, engraving, and 3D printing—all in-house.  We’re experienced in cutting a wide range of materials including 
+							aerospace-grade and FDA-approved materials.  In addition, our machine shop is ITAR compliant.</font></p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="#" class="button special">→</a>
 							</footer>
 						</article>
 					</div>
@@ -155,14 +158,13 @@
 				<div class="inner">
 					<div class="flex">
 						<div class="copyright">
-							&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+							&copy; 2018 Draftek Design, LLC.
 						</div>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-							<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-							<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+							<li><a href="https://www.facebook.com/DraftekDesign/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://twitter.com/draftekdesign" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/paul-lydick-1a821013/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
+							<li><a href="https://www.instagram.com/draftekdesign/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</div>
 				</div>
