--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								<a href="http://www.roboraiders.com"><img src="images/pic03.jpg" alt="Person 1" /></a>
 							</div>
 							<h3>FRC Team 75</h3>
-							<p>We proudly sponsor Hillsborough High School FIRST Team 75, the RoboRaiders, by providing machining, materials, training, and active mentorship the students.</p>
+							<p>We proudly sponsor Hillsborough High School FIRST Team 75, the RoboRaiders, by providing machining, materials, training, and active mentorship to the students.</p>
 						</div>
 						<div class="box person">
 							<div class="image">
