--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<style>
-	.topleft {
+	.topleft {k
 		position: absolute;
 		top: 8px;
 		left: 16px;
@@ -23,11 +23,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<IMG STYLE="position:absolute; TOP:1px; LEFT:1px; WIDTH:11%;" SRC="images/logo.jpg" >
+					<IMG STYLE="position:absolute; TOP:0px; LEFT:0px; WIDTH:27%;" SRC="images/pnglogo.png" >
 					<nav id="nav">
-						<a href="index.html"><font size="4" color="white"><span style="background-color: #343434">&nbsp Home &nbsp</span></font></a>
-						<a href="generic.html"><font size="4" color="white"><span style="background-color: #343434">&nbsp About &nbsp</span></font></a>
-						<a href="elements.html"><font size="4" color="white"><span style="background-color: #343434">&nbsp Contact &nbsp</span></font></a>
+						<a href="index.html"><b><font size="4" color="white">Home</font></b></a>
+						<a href="generic.html"><b><font size="4" color="white">About </font></b></a>
+						<a href="elements.html"><b><font size="4" color="white">Contact </font></b></a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -35,8 +35,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1><span style="background-color: #F7F7F7"><b>&nbsp Drafting, Design, and Rapid Prototyping &nbsp</b></span></h1>
-				<p><font size="5" color="white"><span style="background-color: #343434"> &nbsp Custom solutions for aerospace, medical, consumer product, and military applications. &nbsp </span></font></p>
+				<center><b><font size="7" color="white">&nbsp Drafting, Design, and Rapid Prototyping &nbsp </font></b></center>
+				<b><font size="4" color="white">Custom solutions for aerospace, medical, consumer product, and military applications. </font></b>
 			</section>
 
 		<!-- One -->
@@ -45,35 +45,38 @@
 					<div class="flex flex-3">
 						<article>
 							<header>
-								<h3>ITAR Compliant, SAM Registered, and DD-2345 Certified.</h3>
+								<h3><b><IMG SRC="images/check.png" width="19" height="19">&nbsp ITAR Compliant, SAM Registered, and DD-2345 Certified.</b></h3>
 							</header>
-							<p><font color="black">Find out more about our certifications, government registrations, and NAICS codes here.</font></p>
-							<footer>
-								<a href="#" class="button special">→</a>
-							</footer>
+							<p><font color="black">Find out more about our certifications, government registrations, and NAICS codes <a href="www.google.com">here</a>.</font></p>							
 						</article>
 						<article>
 							<header>
-								<h3>Highly customized solutions for your drafting and design needs. </h3>
+								<h3><b><IMG SRC="images/pencil.png" width="23" height="23">&nbsp Highly customized solutions for your drafting and design needs.</b></h3>
 							</header>
-							<p><font color="black">We provide engineering drawings, 3D models, and custom mechanical designs in most major CAD formats.</font></p>
-							<footer>
-								<a href="#" class="button special">→</a>
-							</footer>
+							<p><font color="black">We provide engineering drawings, 3D models, and custom mechanical designs in most major CAD formats.</font></p>					
 						</article>
 						<article>
 							<header>
-								<h3>Our in-house machine shop cuts down on lead times.</h3>
+								<h3><b><IMG SRC="images/gear.png" width="21" height="21">&nbsp In-house CNC machining, laser cutting, and 3D printing services.</b></h3>
 							</header>
-							<p><font color="black">Learn more about our capabilities in CNC machining, turning, 3D printing, and laser cutting.</font> </p>
-							<footer>
-								<a href="#" class="button special">→</a>
-							</footer>
-						</article>
+							<p><font color="black">Get a free quote today.  &nbsp Learn more about our capabilities in CNC machining, turning, 3D printing, and laser cutting.</font> </p>			
+						</article>			
 					</div>
 				</div>
-			</section>
-
+							<p> &nbsp </p>
+							<center><font size="10" color="black">How can we help you?</font></center><p>	
+							<center>
+							<div class="6u$ 12u$(medium)">		
+							<!-- Buttons -->
+								<ul class="actions fit">
+									<li><a href="#" class="button special fit"><font size="5">Draw it</font></a></li>
+									<li><a href="#" class="button fit"><font size="5">Design it</font></a></li>
+									<li><a href="#" class="button alt fit"><font size="5">Make it</font></a></li>
+								</ul>
+							</div>
+							</center>
+							<p> &nbsp </p> <p> &nbsp </p>					
+					
 		<!-- Two -->
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
@@ -86,22 +89,22 @@
 							<div class="image">
 								<a href="http://www.roboraiders.com"><img src="images/pic03.jpg" alt="Person 1" /></a>
 							</div>
-							<h3>FRC Team 75</h3>
-							<p>We proudly sponsor Hillsborough High School FIRST Team 75, the RoboRaiders, by providing machining, materials, training, and active mentorship to the students.</p>
+							<h3><i>FIRST</i> Robotics</h3>
+							<p>We proudly sponsor Hillsborough High School Team 75, the RoboRaiders, by providing machining, materials, training, and active mentorship to the students.</p>
 						</div>
 						<div class="box person">
 							<div class="image">
 								<img src="images/pic04.jpg" alt="Person 2" />
 							</div>
 							<h3>Upwork</h3>
-							<p>Our engineers are now expanding to the Upwork network to provide quality services not only to industry-leading companies, but to individuals and small companies alike.</p>
+							<p>Our engineers are expanding to the Upwork network to provide quality services not only to industry-leading companies, but to individuals and small companies alike.</p>
 						</div>
 						<div class="box person">
 							<div class="image">
 								<img src="images/pic05.jpg" alt="Person 3" />
 							</div>
 							<h3>Xometry</h3>
-							<p>We're happy to announce our new partnership with Xometry. As a result, we've ramped up our quality control processes, tooling, inspection equipment, and machinery.</p>
+							<p>We've partnered up with Xometry to modernize and improve our quality control processes, tooling, inspection equipment, and machinery.</p>
 						</div>
 						<div class="box person">
 							<div class="image">
@@ -118,8 +121,8 @@
 			<section id="three" class="wrapper special">
 				<div class="inner">
 					<header class="align-center">
-						<h2>How can we help?</h2>
-						<p><b>Check out our portfolio below.</b></p>
+						<h2><b>Our Portfolio</b></h2>
+						<p><font color="black">Choose a category below to see some of our work.</font></p>
 					</header>
 					<div class="flex flex-2">
 						<article>
