--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<header>
 								<h3><b><IMG SRC="images/gear.png" width="21" height="21">&nbsp In-house CNC machining, laser cutting, and 3D printing services.</b></h3>
 							</header>
-							<p><font color="black">Get a free quote today.  &nbsp Learn more about our capabilities in CNC machining, turning, 3D printing, and laser cutting.</font> </p>			
+							<p><font color="black">Get a free quote today.  <a href="www.google.com">Learn more</a> about our capabilities in CNC machining, turning, 3D printing, and laser cutting.</font> </p>			
 						</article>			
 					</div>
 				</div>
